Changed path to Main Page
URL Change from ...github.io/main to ...github.io for main page

Co-Authored-By: Sleaze <96695272+SleazeStiKs@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/stylesheet.css" rel="stylesheet">
+    <link href="dist/stylesheet.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/e550f88b2c.js" crossorigin="anonymous"></script>
 
@@ -15,7 +15,7 @@
 <body class="bg-black antialiased">
 
     <div class="basis-3/4 mb-56">
-        <img src="background.jpg" alt="Minecraft Tournament">
+        <img src="assets/background.jpg" alt="Minecraft Tournament">
     </div>
 
     <div class="container mx-auto pb-24">
@@ -24,7 +24,7 @@
             <div class="text-gray-500">
                 <div
                     class="border border-white hover:shadow-video-custom transition--all ease-in-out duration-150 cursor-pointer aspect-video relative">
-                    <img src="background.jpg" alt="Minecraft Tournament">
+                    <img src="assets/background.jpg" alt="Minecraft Tournament">
                 </div>
             </div>
             <div class="text-gray-500 text-center lg:text-left md:flex md:flex-col md:justify-center">
