--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -12,73 +12,8 @@
     <title>Minecraft Tournament</title>
 </head>
 
-<body class="bg-black antialiased">
-
-    <div class="basis-3/4 mb-56">
-        <img src="/assets/background.jpg" alt="Minecraft Tournament">
-    </div>
-
-    <div class="container mx-auto pb-24">
-        <div class="grid grid-cols-2 gap-5">
-            <!--justify-around-->
-            <div class="text-gray-500">
-                <div
-                    class="border border-white hover:shadow-video-custom transition--all ease-in-out duration-150 cursor-pointer aspect-video relative">
-                    <img src="/assets/background.jpg" alt="Minecraft Tournament">
-                </div>
-            </div>
-            <div class="text-gray-500 text-center lg:text-left md:flex md:flex-col md:justify-center">
-                <h2 class="text-white text-3xl font-bold mb-4">
-                    What is Minecraft Championship?
-                </h2>
-                <p class="mb-2 font-medium text-gray-500">
-                    Minecraft Championship (or <b>MCT</b> for short) is a private competetive event <br>
-                    for <a class="font-bold" href="https://www.minecraft.net/de-de/store/minecraft-java-edition"
-                        target="blank">Minecraft: Java Edition <i class="fas fa-external-link-alt"></i></a>
-                </p>
-                <p class="mb-4 font-medium text-gray-500">
-                    Whether you are building up your base, exploring vast resource worlds or <br>
-                    completing in-depth quests, we have something for everyone here on <br>
-                    Origin Realms!
-                </p>
-                <p class="font-medium text-gray-500">
-                    <a href="/schedule/">Schedule</a>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div>
-        <footer class=" bg-yellow-400">
-            <div class="bg-yellow-500">
-                <div class="container mx-auto">
-                    <div class="py-3 px-6 md:flex md:items-center md:justify-between">
-                        <div class="flex relative font-bold text-sm uppercase justify-center lg:items-stretch transition-opacity duration-150 ease-in-out hover:opacity-80 cursor-pointer">
-                            <div class="bg-yellow-600 tracking-widest py-2 px-3 text-yellow-900">
-                                play.mct.com
-                            </div>
-                            <div class="flex items-center px-3 tracking-wide bg-yellow-600 opacity-80 text-yellow-900">
-                                420
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container mx-auto flex flex-col md:flex-row md:items-center p-6">
-                <div class="text">
-                    <div class="text-black opacity-80 leading-tight">
-                        Minecraft Tournament
-                    </div>
-                    <div class="text-yellow-900 leading-tight">
-                        We are in no way affiliated with or endorsed by Mojang, AB.
-                    </div>
-                </div>
-            </div>
-            
-        </footer>
-        
-    </div>
-
+<body class="bg-black text-center">
+    <meta http-equiv="refresh" content="0; URL=/home">
 </body>
 
 </html>
