--- a/schedule/index.html
+++ b/schedule/index.html
@@ -12,8 +12,8 @@
     <title>Minecraft Tournament</title>
 </head>
 
-<body class="bg-black antialiased">
-    
+<body class="bg-black antialiased relative text-white">
+
     <!-- NAVBAR -->
     <div class="min-w-full absolute z-20">
         <div class="flex justify-center">
@@ -40,59 +40,72 @@
         </div>
     </div>
 
+    <!-- BODY -->
+    <!--Background Image-->
+    <div class="basis-3/4 mb-28">
+        <img src="/assets/overlay.png" class="absolute min-w-full">
+        <img src="/assets/background_2.jpg" alt="Minecraft Tournament" class="min-w-full">
+    </div>
 
-    <div class="container mx-auto pb-24">
-        <div class="grid grid-cols-2 gap-5">
-            <div class="text-gray-500">
-                <div
-                    class="border border-white hover:shadow-video-custom transition--all ease-in-out duration-150 cursor-pointer aspect-video relative">
-                    <img src="/assets/background.jpg" alt="Minecraft Tournament">
+    <!-- Content -->
+    <section id="schedule">
+        <div class="container mx-auto px-10 md:py-16">
+            <div class="timeline-container">
+                <div class="timeline">
+                    <ul>
+                        <li>
+                            <div class="timeline-content">
+                                <h3 class="date">20th may, 2022</h3>
+                                <h1>1st MCT Event</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-content">
+                                <h3 class="date">20th may, 2022</h3>
+                                <h1>2nd MCT Event</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-            <div class="text-gray-500 text-center lg:text-left md:flex md:flex-col md:justify-center">
-                <h2 class="text-white text-3xl font-bold mb-4">
-                    What is Minecraft Championship?
-                </h2>
-                <p class="mb-2 font-medium text-gray-500">
-                    Minecraft Championship (or <b>MCT</b> for short) is a private competetive event <br>
-                    for <a class="font-bold" href="https://www.minecraft.net/de-de/store/minecraft-java-edition"
-                        target="blank">Minecraft: Java Edition <i class="fas fa-external-link-alt"></i></a>
-                </p>
             </div>
         </div>
-    </div>
+    </section>
 
 
-    <div>
-        <footer class=" bg-yellow-400">
-            <div class="bg-yellow-500">
-                <div class="container mx-auto">
-                    <div class="py-3 px-6 md:flex md:items-center md:justify-between">
-                        <div
-                            class="flex relative font-bold text-sm uppercase justify-center lg:items-stretch transition-opacity duration-150 ease-in-out hover:opacity-80 cursor-pointer">
-                            <div class="bg-yellow-600 tracking-widest py-2 px-3 text-yellow-900">
-                                play.mct.com
-                            </div>
-                            <div class="flex items-center px-3 tracking-wide bg-yellow-600 opacity-80 text-yellow-900">
-                                420
-                            </div>
-                        </div>
+    <footer class=" bg-yellow-400">
+        <div class="bg-yellow-500">
+            <div class="container mx-auto">
+                <div class="py-1 px-6 md:flex md:items-center">
+                    <div class="socials flex flex-wrap justify-center mt-4 md:mt-0 text-ip-900">
+                        <a href="https://discord.com/invite/X9WKPgHYpH" target="_blank"
+                            class="block p-3 transition duration-150 ease-in-out hover:opacity-75">
+                            <i class="fa-brands fa-discord text-yellow-900 text-base"></i>
+                        </a>
+                        <a href="https://twitter.com/MCT_Tournament" target="_blank"
+                            class="block p-3 transition duration-150 ease-in-out hover:opacity-75">
+                            <i class="fa-brands fa-twitter text-yellow-900 text-base"></i>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="container mx-auto flex flex-col md:flex-row md:items-center p-6">
-                <div class="text">
-                    <div class="text-black opacity-80 leading-tight">
-                        Minecraft Tournament
-                    </div>
-                    <div class="text-yellow-900 leading-tight">
-                        We are in no way affiliated with or endorsed by Mojang, AB.
-                    </div>
+        </div>
+        <div class="container mx-auto flex flex-col md:flex-row md:items-center p-6">
+            <div class="text">
+                <div class="text-black opacity-80 leading-tight">
+                    Minecraft Tournament
+                </div>
+                <div class="text-yellow-900 leading-tight">
+                    We are in no way affiliated with or endorsed by Mojang, AB.
                 </div>
             </div>
-        </footer>
-    </div>
-    
+        </div>
+    </footer>
+
+
 </body>
 
 </html>
