Replaced Rules Page with Participation Page

--- a/home/index.html
+++ b/home/index.html
@@ -32,9 +32,9 @@
                     Blog
                 </button>
             </a>
-            <a href="/rules">
-                <button type="button" class="btn-rules">
-                    Rules
+            <a href="/participate">
+                <button type="button" class="btn-participate">
+                    Participate
                 </button>
             </a>
         </div>
