--- a/participate/index.html
+++ b/participate/index.html
@@ -22,8 +22,8 @@
                     Home
                 </button>
             </a>
-            <a>
-                <button type="button" class="btn-schedule active-schedule">
+            <a href="/schedule">
+                <button type="button" class="btn-schedule">
                     Schedule
                 </button>
             </a>
@@ -33,7 +33,7 @@
                 </button>
             </a>
             <a href="/participate">
-                <button type="button" class="btn-participate">
+                <button type="button" class="btn-participate active-participate">
                     Participate
                 </button>
             </a>
@@ -41,38 +41,14 @@
     </div>
 
     <!-- BODY -->
-    <!--Background Image-->
-    <div class="basis-3/4 mb-28">
-        <img src="/assets/overlay.png" class="absolute min-w-full">
-        <img src="/assets/background_2.jpg" alt="Minecraft Tournament" class="min-w-full">
-    </div>
 
     <!-- Content -->
-    <section id="schedule">
-        <div class="container mx-auto px-10 md:py-16">
-            <div class="timeline-container">
-                <div class="timeline">
-                    <ul>
-                        <li>
-                            <div class="timeline-content">
-                                <h3 class="date">20th may, 2022</h3>
-                                <h1>1st MCT Event</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
-                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-content">
-                                <h3 class="date">20th may, 2022</h3>
-                                <h1>2nd MCT Event</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
-                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <section id="form">
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSeSPbl91u33MR1HkbSDhWYLGVOR005YajlDu6YrEvz6ALb7Hw/viewform?embedded=true"
+            width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">
+            Loading the form…
+        </iframe>
     </section>
 
 
