Added Event & FAQ Page

--- a/event/index.html
+++ b/event/index.html
@@ -28,8 +28,8 @@
                 </button>
             </a>
             <a>
-                <button type="button" class="btn-blog active-blog">
-                    Blog
+                <button type="button" class="btn-event active-event">
+                    Event & FAQ
                 </button>
             </a>
             <a href="/participate">
