--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
     <title>Minecraft Tournament</title>
 </head>
 
-<body class="bg-black antialiased relative">
+<body class="bg-black antialiased text-white">
 
     <!-- NAVBAR -->
     <div class="min-w-full absolute z-20">
@@ -27,9 +27,9 @@
                     Schedule
                 </button>
             </a>
-            <a href="/blog">
-                <button type="button" class="btn-blog">
-                    Blog
+            <a href="/event">
+                <button type="button" class="btn-event">
+                    Event & FAQ
                 </button>
             </a>
             <a href="/participate">
