--- a/schedule/index.html
+++ b/schedule/index.html
@@ -27,9 +27,9 @@
                     Schedule
                 </button>
             </a>
-            <a href="/blog">
-                <button type="button" class="btn-blog">
-                    Blog
+            <a href="/event">
+                <button type="button" class="btn-event">
+                    Event & FAQ
                 </button>
             </a>
             <a href="/participate">
