--- a/event/index.html
+++ b/event/index.html
@@ -48,9 +48,15 @@
     </div>
 
     <!-- Content -->
-    <section id="schedule">
+    <section id="event">
         <div class="container mx-auto px-10 md:py-16">
-            Blog
+            Event
+        </div>
+    </section>
+
+    <section id="faq">
+        <div class="container mx-auto px-10 md:py-16">
+            FAQ
         </div>
     </section>
 
