Updated Schedule Page

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -57,16 +57,75 @@
                             <div class="timeline-content">
                                 <h3 class="date">20th may, 2022</h3>
                                 <h1>1st MCT Event</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
-                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                                    laudantium
+                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.
+                                </p>
+
+                                <div class="winner_team">
+                                    <div class="winners">
+                                        <p>
+                                            Winners
+                                        </p>
+                                        <div class="winner-avatars">
+                                            <a>
+                                                <button type="button" class="btn-winner-avatars">
+                                                    <img src="https://minotar.net/helm/MineralWarrior/32.png">
+                                                </button>
+                                            </a>
+                                            <a>
+                                                <button type="button" class="btn-winner-avatars">
+                                                    <img src="https://minotar.net/helm/RobaCZ/32.png">
+                                                </button>
+                                            </a>
+                                            <a>
+                                                <button type="button" class="btn-winner-avatars">
+                                                    <img src="https://minotar.net/helm/nikita_maly/32.png">
+                                                </button>
+                                            </a>
+                                            <a>
+                                                <button type="button" class="btn-winner-avatars">
+                                                    <img src="https://minotar.net/helm/LokidU/32.png">
+                                                </button>
+                                            </a>
+                                            <a>
+                                                <button type="button" class="btn-winner-avatars">
+                                                    <img src="https://minotar.net/helm/Technoblade/32.png">
+                                                </button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="winners">
+                                        <p>1st <i class="fas fa-trophy"></i></p>
+                                        <div class="winner-avatars">
+                                            <a>
+                                                <button type="button" class="btn-winner-avatars">
+                                                    <img src="https://minotar.net/helm/MineralWarrior/32.png">
+                                                </button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </li>
-                        <li>
+                        <li id="ongoing_event">
                             <div class="timeline-content">
-                                <h3 class="date">20th may, 2022</h3>
+                                <h3 class="date">21th may, 2022</h3>
                                 <h1>2nd MCT Event</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
-                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                                    laudantium
+                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.
+                                </p>
+                            </div>
+                        </li>
+                        <li id="coming_event">
+                            <div class="timeline-content">
+                                <h3 class="date">22th may, 2022</h3>
+                                <h1>3rd MCT Event</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab
+                                    laudantium
+                                    voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -80,7 +139,7 @@
         <div class="bg-yellow-500">
             <div class="container mx-auto">
                 <div class="py-1 px-6 md:flex md:items-center">
-                    <div class="socials flex flex-wrap justify-center mt-4 md:mt-0 text-ip-900">
+                    <div class="socials flex flex-wrap justify-center mt-4 md:mt-0">
                         <a href="https://discord.com/invite/X9WKPgHYpH" target="_blank"
                             class="block p-3 transition duration-150 ease-in-out hover:opacity-75">
                             <i class="fa-brands fa-discord text-yellow-900 text-base"></i>
