Added Team Icons, Schedule Page Updated

--- a/event/index.html
+++ b/event/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/e550f88b2c.js" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="/assets/crown_32px.ico">
-    <title>Minecraft Tournament</title>
+    <title>Event & FAQ - Minecraft Tournament</title>
 </head>
 
 <body class="bg-black antialiased relative text-white">
