Event Rules Added

--- a/event/index.html
+++ b/event/index.html
@@ -48,9 +48,89 @@
     </div>
 
     <!-- Content -->
-    <section id="event">
-        <div class="container mx-auto px-10 md:py-16">
-            Event
+    <section id="event" class="container mx-auto">
+        <div class="px-6 md:px-10 lg:px-20 mx-16">
+            <div class="pb-24">
+                <div class="text-5xl text-white font-bold text-center">
+                    Rules
+                </div>
+                <div class="max-w-2xl mx-auto text-center text-gray-500 mt-5">
+                    <p>
+                        Welcome to the Minecraft Tournaments rules page! This page is designed to make understanding our
+                        rules simple and easy. Rules are expected to be followed by all participants, regardless of their
+                        rank or time
+                        played on the server.
+                    </p>
+                </div>
+            </div>
+            <div class="content pb-20">
+                <div class="rules">
+                    <p class="text-6xl font-bold">
+                        Inappropriate Chat Conduct
+                    </p>
+                    <p class="text-sm text-gray-500">
+                        The way users conduct themselves in our chat is incredibly important, as Minecraft Tournament aims to be a
+                        friendly place for players of all ages. Below are examples of the kind of conduct that will result
+                        in a punishment
+                    </p>
+                    <ul class="text-lg text-gray-400 mt-12">
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Disrespectful/offensive language and hate speech.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Racism and Discrimination.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Spamming or rioting of any kind.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Harassing and abusing others.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Sharing personal information regarding others.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Advertising other servers or IP's.
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
