--- a/event/index.html
+++ b/event/index.html
@@ -50,25 +50,29 @@
     <!-- Content -->
     <section id="event" class="container mx-auto">
         <div class="px-6 md:px-10 lg:px-20 mx-16">
-            <div class="pb-24">
-                <div class="text-5xl text-white font-bold text-center">
+            <div class="pb-12">
+                <div class="text-2xl text-white font-bold text-center">
                     Rules
                 </div>
-                <div class="max-w-2xl mx-auto text-center text-gray-500 mt-5">
+                <div class="max-w-2xl mx-auto text-center text-gray-500">
                     <p>
                         Welcome to the Minecraft Tournaments rules page! This page is designed to make understanding our
                         rules simple and easy. Rules are expected to be followed by all participants, regardless of their
                         rank or time
                         played on the server.
                     </p>
+                    <p class="pt-2">
+                        Our staff team works incredibly hard to keep Minecraft Tournament safe and enjoyable for all contestants. If you find yourself being
+                        warned by a member of our team (Moderator, Admin) you are expected to respect their decision and work with them to resolve the situation.
+                    </p>
                 </div>
             </div>
-            <div class="content pb-20">
+            <div class="content pb-10">
                 <div class="rules">
                     <p class="text-6xl font-bold">
                         Inappropriate Chat Conduct
                     </p>
-                    <p class="text-sm text-gray-500">
+                    <p class="text-sm text-gray-500 mb-4">
                         The way users conduct themselves in our chat is incredibly important, as Minecraft Tournament aims to be a
                         friendly place for players of all ages. Below are examples of the kind of conduct that will result
                         in a punishment
@@ -85,7 +89,7 @@
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
+                                <div class="rules-num">2</div>
                                 <span class="block text-gray-300 font-bold ml-4">
                                     &nbsp;
                                     Racism and Discrimination.
@@ -94,7 +98,7 @@
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
+                                <div class="rules-num">3</div>
                                 <span class="block text-gray-300 font-bold ml-4">
                                     &nbsp;
                                     Spamming or rioting of any kind.
@@ -103,7 +107,7 @@
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
+                                <div class="rules-num">4</div>
                                 <span class="block text-gray-300 font-bold ml-4">
                                     &nbsp;
                                     Harassing and abusing others.
@@ -112,7 +116,7 @@
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
+                                <div class="rules-num">5</div>
                                 <span class="block text-gray-300 font-bold ml-4">
                                     &nbsp;
                                     Sharing personal information regarding others.
@@ -121,10 +125,103 @@
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
+                                <div class="rules-num">6</div>
                                 <span class="block text-gray-300 font-bold ml-4">
                                     &nbsp;
                                     Advertising other servers or IP's.
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="rules pt-12">
+                    <p class="text-6xl font-bold">
+                        Inappropriate Behavior
+                    </p>
+                    <p class="text-sm text-gray-500 mb-4">
+                        We expect our users to behave in an appropriate and respectful manner at all times. Minecraft Turnament is designed to be a
+                        non-competitive casual game, not a place to cause havoc. Below are examples of behaviour that will result in a
+                        punishment, and remember; your account is your responsibility!
+                    </p>
+                    <ul class="text-lg text-gray-400 mt-12">
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Inappropriate account names and skins.
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="rules pt-12">
+                    <p class="text-6xl font-bold">
+                        Hacked Clients & Modifications
+                    </p>
+                    <p class="text-sm text-gray-500 mb-4">
+                        Minecraft Tournament does not permit the use of any clients or modifications that provide an unfair advantage. When choosing
+                        modifications to add to your game, please use our common sense approach (Does it give you an advantage over other
+                        players?), if the answer is yes, please don't use that modification.
+                    </p>
+                    <ul class="text-lg text-gray-400 mt-12">
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    X-ray resource packs/modifications.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">2</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Non-cosmetic software.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">3</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Hacked clients.
+                                </span>
+                            </div>
+                        </li>
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">4</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Auto-clicking.
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="rules pt-12">
+                    <p class="text-6xl font-bold">
+                        Glitches & Exploits
+                    </p>
+                    <p class="text-sm text-gray-500 mb-4">
+                        During your time on Minecraft Tournament, we expect you to play fair, the way we intended the server to be enjoyed. If you are
+                        caught abusing Minecraft bugs, or exploits within our own plugins, you will be punished instantly. Examples of glitches
+                        and exploits are
+                    </p>
+                    <ul class="text-lg text-gray-400 mt-12">
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num">1</div>
+                                <span class="block text-gray-300 font-bold ml-4">
+                                    &nbsp;
+                                    Clearly unintentional bugs with our custom systems.
                                 </span>
                             </div>
                         </li>
