Updated Rules & FAQ

--- a/event/index.html
+++ b/event/index.html
@@ -54,12 +54,11 @@
                 <div class="text-2xl text-white font-bold text-center">
                     Rules
                 </div>
-                <div class="max-w-2xl mx-auto text-center text-gray-500">
+                <div class="max-w-2xl mx-auto text-center text-gray-500 pt-2">
                     <p>
                         Welcome to the Minecraft Tournaments rules page! This page is designed to make understanding our
                         rules simple and easy. Rules are expected to be followed by all participants, regardless of their
-                        rank or time
-                        played on the server.
+                        rank or time played on the server.
                     </p>
                     <p class="pt-2">
                         Our staff team works incredibly hard to keep Minecraft Tournament safe and enjoyable for all contestants. If you find yourself being
@@ -227,6 +226,7 @@
                         </li>
                     </ul>
                 </div>
+                
             </div>
         </div>
     </section>
