--- a/event/index.html
+++ b/event/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="content pb-10">
-                <div class="rules">
+                <div class="rules pt-12">
                     <p class="text-6xl font-bold">
                         Inappropriate Chat Conduct
                     </p>
